k8s/radioapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radioapi
  name: radioapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radioapi
  template:
    metadata:
      labels:
        app: radioapi
    spec:
      containers:
        - image: chucksn611/radioapi:latest
          name: radioapi
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radioapi-service
  name: radioapi-service
spec:
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  selector:
    app: radioapi
  type: ClusterIP
