k8s/radioclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radioclient
  name: radioclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radioclient
  template:
    metadata:
      labels:
        app: radioclient
    spec:
      containers:
        - image: chucksn611/radioappclient:latest
          imagePullPolicy: Always
          name: radioclient
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radioclient-service
  name: radioclient-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: radioclient
  type: ClusterIP
