k8s/radio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radio-ingress
spec:
  rules:
    - host: radio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radioclient-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: radioapi-service
                port:
                  number: 4000
